--- a/pacman-msys.conf
+++ b/pacman-msys.conf
@@ -25,7 +25,7 @@ SyncFirst    = manjaro-system archlinux-keyring manjaro-keyring
 Architecture = x86_64
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-#IgnorePkg   =
+IgnorePkg   =  mingw-w64-x86_64-libjpeg-turbo mingw-w64-x86_64-lensfun mingw-w64-x86_64-gtk3 mingw-w64-x86_64-gtkmm3
 #IgnoreGroup =
 
 #NoUpgrade   =
