Switched to a msys2 repo mirror for now

--- a/pacman-msys.conf
+++ b/pacman-msys.conf
@@ -68,7 +68,9 @@ LocalFileSigLevel = Optional
 #
 
 [msys]
-Server = http://repo.msys2.org/$repo/$arch
+# Server = http://repo.msys2.org/$repo/$arch
+Server = https://mirror.yandex.ru/mirrors/msys2/$repo/$arch
 
 [mingw64]
-Server = http://repo.msys2.org/mingw/$arch
+# Server = http://repo.msys2.org/mingw/$arch
+Server = https://mirror.yandex.ru/mirrors/msys2/mingw/$arch
